# xarray-dataclasses

./: genindex.html  objects.inv  pyproject.toml  searchindex.js
.doctrees/: environment.pickle
.doctrees/_apidoc/: xarray_dataclasses.utils.doctree
_apidoc/: xarray_dataclasses.utils.html
_modules/xarray_dataclasses/: common.html  dataarray.html  dataset.html  utils.html
tests/: test_dataset.py
xarray_dataclasses/: dataset.py
