[tool.poetry]
name = "xarray-dataclasses"
version = "0.3.0"
description = "xarray extension for DataArray and Dataset classes"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/xarray-dataclasses/"
documentation = "https://astropenguin.github.io/xarray-dataclasses/"

[tool.poetry.dependencies]
python = ">=3.7, <4"
numpy = "^1.21"
typing-extensions = "^3.10"
xarray = ">=0.21.1"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0.1"
ipython = "^7.21"
ipykernel = "^5.5"
pydata-sphinx-theme = "^0.4"
pytest = "^7.0.0"
sphinx = "^3.5"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
